--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="normalize.css" />
+    <!-- Google fonts, Font Awesome -->
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Noto+Serif|Roboto+Slab&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Noto+Serif|Roboto+Slab|Kaushan+Script&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
 
     <title>Theme Clone</title>
@@ -19,12 +24,12 @@
       <div class="container">
         <a href="#" class="navbar-brand">Start Bootstrap</a>
         <!-- <div class="navbar-toggle"></div> -->
-        <ul class="navbar-menu navbar-right">
+        <ul class="navbar-menu">
           <li><a href="#services">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -39,18 +44,59 @@
         </div>
       </div>
     </header>
-
-    <section id="services">
-      <div class="container"></div>
+    <!-- Services -->
+    <section class="page-section" id="services">
+      <div class="container">
+        <h2 class="section-heading">Services</h2>
+        <h3 class="section-subheading">
+          Lorem ipsum dolor sit amet consectetur.
+        </h3>
+        <div class="service-item">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x"></i>
+            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">E-Commerce</h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Asperiores, deleniti! Doloremque provident consequatur placeat
+            consectetur eaque sed eum libero possimus?
+          </p>
+        </div>
+        <div class="service-item">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x"></i>
+            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Responsive Design</h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Asperiores, deleniti! Doloremque provident consequatur placeat
+            consectetur eaque sed eum libero possimus?
+          </p>
+        </div>
+        <div class="service-item">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x"></i>
+            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Web Security</h4>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Asperiores, deleniti! Doloremque provident consequatur placeat
+            consectetur eaque sed eum libero possimus?
+          </p>
+        </div>
+      </div>
     </section>
 
-    <section id="portfolio"></section>
+    <section class="page-section" id="portfolio"></section>
 
-    <section id="about"></section>
+    <section class="page-section" id="about"></section>
 
-    <section id="team"></section>
+    <section class="page-section" id="team"></section>
 
-    <section id="contact"></section>
+    <section class="page-section" id="contact"></section>
 
     <footer class="footer"></footer>
   </body>
