--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
+    <!-- Scripts -->
+    <script src="index.js" defer></script>
 
     <title>Theme Clone</title>
   </head>
