Add smooth scroll script

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/normalize.css" />
     <!-- Google fonts, Font Awesome -->
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Noto+Serif|Roboto+Slab|Kaushan+Script&display=swap"
@@ -16,7 +16,7 @@
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
     <!-- Scripts -->
-    <script src="index.js" defer></script>
+    <script src="scripts/index.js" async></script>
 
     <title>Theme Clone</title>
   </head>
@@ -27,11 +27,11 @@
         <a href="#" class="navbar-brand">Start Bootstrap</a>
         <!-- <div class="navbar-toggle"></div> -->
         <ul class="navbar-menu">
-          <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="#services">Services</a></li>
         </ul>
       </div>
     </nav>
@@ -92,7 +92,11 @@
       </div>
     </section>
 
-    <section class="page-section" id="portfolio"></section>
+    <section class="page-section" id="portfolio">
+      <div class="container">
+        <h2 class="section-heading">Portfolio</h2>
+      </div>
+    </section>
 
     <section class="page-section" id="about"></section>
 
