Fix anchor smooth scrolling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <!-- Scripts -->
     <script src="scripts/index.js" async></script>
+    <script src="scripts/smooth-scroll.polyfills.min.js" async></script>
 
     <title>Theme Clone</title>
   </head>
@@ -27,11 +28,11 @@
         <a href="#" class="navbar-brand">Start Bootstrap</a>
         <!-- <div class="navbar-toggle"></div> -->
         <ul class="navbar-menu">
+          <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="#services">Services</a></li>
         </ul>
       </div>
     </nav>
@@ -61,8 +62,8 @@
           <h4 class="service-heading">E-Commerce</h4>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Asperiores, deleniti! Doloremque provident consequatur placeat
-            consectetur eaque sed eum libero possimus?
+            Asperiores, deleniti! provident consequatur placeat consectetur
+            eaque sed eum libero possimus?
           </p>
         </div>
         <div class="service-item">
@@ -73,8 +74,8 @@
           <h4 class="service-heading">Responsive Design</h4>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Asperiores, deleniti! Doloremque provident consequatur placeat
-            consectetur eaque sed eum libero possimus?
+            Asperiores, deleniti! provident consequatur placeat consectetur
+            eaque sed eum libero possimus?
           </p>
         </div>
         <div class="service-item">
@@ -85,8 +86,8 @@
           <h4 class="service-heading">Web Security</h4>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Asperiores, deleniti! Doloremque provident consequatur placeat
-            consectetur eaque sed eum libero possimus?
+            Asperiores, deleniti! provident consequatur placeat consectetur
+            eaque sed eum libero possimus?
           </p>
         </div>
       </div>
@@ -95,6 +96,9 @@
     <section class="page-section" id="portfolio">
       <div class="container">
         <h2 class="section-heading">Portfolio</h2>
+        <h3 class="section-subheading">
+          Lorem ipsum dolor sit amet consectetur.
+        </h3>
       </div>
     </section>
 
