Fix navbar shrink transition

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
     <!-- Scripts -->
+    <script src="scripts/smooth-scroll.polyfills.min.js"></script>
     <script src="scripts/index.js" async></script>
-    <script src="scripts/smooth-scroll.polyfills.min.js" async></script>
 
     <title>Theme Clone</title>
   </head>
@@ -28,7 +28,7 @@
         <a href="#" class="navbar-brand">Start Bootstrap</a>
         <!-- <div class="navbar-toggle"></div> -->
         <ul class="navbar-menu">
-          <li><a href="#services">Services</a></li>
+          <li><a class="anchor" href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#team">Team</a></li>
