Move script tags to end of body

--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
     />
-    <!-- Scripts -->
-    <script src="scripts/smooth-scroll.polyfills.min.js"></script>
-    <script src="scripts/index.js" async></script>
-
     <title>Theme Clone</title>
   </head>
   <body>
@@ -109,5 +105,9 @@
     <section class="page-section" id="contact"></section>
 
     <footer class="footer"></footer>
+
+    <!-- Scripts -->
+    <script src="scripts/smooth-scroll.polyfills.min.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
