Update portfolio section

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <a href="#" class="navbar-brand">Start Bootstrap</a>
         <!-- <div class="navbar-toggle"></div> -->
         <ul class="navbar-menu">
-          <li><a class="anchor" href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a class="js-scroll" href="#services">Services</a></li>
+          <li><a class="js-scroll" href="#portfolio">Portfolio</a></li>
+          <li><a class="js-scroll" href="#about">About</a></li>
+          <li><a class="js-scroll" href="#team">Team</a></li>
+          <li><a class="js-scroll" href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -50,6 +50,7 @@
         <h3 class="section-subheading">
           Lorem ipsum dolor sit amet consectetur.
         </h3>
+
         <div class="service-item">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x"></i>
@@ -95,6 +96,49 @@
         <h3 class="section-subheading">
           Lorem ipsum dolor sit amet consectetur.
         </h3>
+
+        <div class="portfolio-item">
+          <div class="portfolio-link"></div>
+          <div class="portfolio-caption">
+            <h4>Threads</h4>
+            <p>Illustration</p>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-link"></div>
+          <div class="portfolio-caption">
+            <h4>Explore</h4>
+            <p>Graphic Design</p>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-link"></div>
+          <div class="portfolio-caption">
+            <h4>Finish</h4>
+            <p>Identity</p>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-link"></div>
+          <div class="portfolio-caption">
+            <h4>Lines</h4>
+            <p>Branding</p>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-link"></div>
+          <div class="portfolio-caption">
+            <h4>Southwest</h4>
+            <p>Website Design</p>
+          </div>
+        </div>
+        <div class="portfolio-item">
+          <div class="portfolio-link"></div>
+          <div class="portfolio-caption">
+            <h4>Window</h4>
+            <p>Photography</p>
+          </div>
+        </div>
       </div>
     </section>
 
