--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar" id="top">
       <div class="container">
-        <a href="#" class="navbar-brand">Start Bootstrap</a>
+        <a href="#top" class="navbar-brand js-scroll">Start Bootstrap</a>
         <!-- <div class="navbar-toggle"></div> -->
         <ul class="navbar-menu">
           <li><a class="js-scroll" href="#services">Services</a></li>
