--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="page-section" id="services">
       <div class="container">
         <h2 class="section-heading">Services</h2>
-        <h3 class="section-subheading">
+        <h3 class="section-subheading text-muted">
           Lorem ipsum dolor sit amet consectetur.
         </h3>
 
@@ -57,7 +57,7 @@
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">E-Commerce</h4>
-          <p>
+          <p class="text-muted">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Asperiores, deleniti! provident consequatur placeat consectetur
             eaque sed eum libero possimus?
@@ -69,7 +69,7 @@
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Responsive Design</h4>
-          <p>
+          <p class="text-muted">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Asperiores, deleniti! provident consequatur placeat consectetur
             eaque sed eum libero possimus?
@@ -81,7 +81,7 @@
             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Web Security</h4>
-          <p>
+          <p class="text-muted">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Asperiores, deleniti! provident consequatur placeat consectetur
             eaque sed eum libero possimus?
@@ -93,7 +93,7 @@
     <section class="page-section" id="portfolio">
       <div class="container">
         <h2 class="section-heading">Portfolio</h2>
-        <h3 class="section-subheading">
+        <h3 class="section-subheading text-muted">
           Lorem ipsum dolor sit amet consectetur.
         </h3>
 
@@ -101,52 +101,165 @@
           <div class="portfolio-link"></div>
           <div class="portfolio-caption">
             <h4>Threads</h4>
-            <p>Illustration</p>
+            <p class="text-muted">Illustration</p>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="portfolio-link"></div>
           <div class="portfolio-caption">
             <h4>Explore</h4>
-            <p>Graphic Design</p>
+            <p class="text-muted">Graphic Design</p>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="portfolio-link"></div>
           <div class="portfolio-caption">
             <h4>Finish</h4>
-            <p>Identity</p>
+            <p class="text-muted">Identity</p>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="portfolio-link"></div>
           <div class="portfolio-caption">
             <h4>Lines</h4>
-            <p>Branding</p>
+            <p class="text-muted">Branding</p>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="portfolio-link"></div>
           <div class="portfolio-caption">
             <h4>Southwest</h4>
-            <p>Website Design</p>
+            <p class="text-muted">Website Design</p>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="portfolio-link"></div>
           <div class="portfolio-caption">
             <h4>Window</h4>
-            <p>Photography</p>
+            <p class="text-muted">Photography</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="page-section" id="about"></section>
+    <section class="page-section" id="about">
+      <div class="container">
+        <h2 class="section-heading">About</h2>
+        <h3 class="section-subheading text-muted">
+          Lorem ipsum dolor sit amet consectetur.
+        </h3>
+        <ul class="timeline">
+          <li>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>1995-2016</h4>
+                <h4 class="timeline-subheading">My Humble Beginnings</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
+                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
+                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                  dolore laudantium consectetur!
+                </p>
+              </div>
+            </div>
+            <div class="timeline-image">
+              <img src="https://via.placeholder.com/150" alt="" />
+            </div>
+          </li>
+          <li class="timeline-inverted">
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>August 2016</h4>
+                <h4 class="timeline-subheading">A Designer in Training</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
+                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
+                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                  dolore laudantium consectetur!
+                </p>
+              </div>
+            </div>
+            <div class="timeline-image">
+              <img src="https://via.placeholder.com/150" alt="" />
+            </div>
+          </li>
+          <li>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>2016-2019</h4>
+                <h4 class="timeline-subheading">
+                  Transition to Code
+                </h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
+                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
+                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                  dolore laudantium consectetur!
+                </p>
+              </div>
+            </div>
+            <div class="timeline-image">
+              <img src="https://via.placeholder.com/150" alt="" />
+            </div>
+          </li>
+          <li class="timeline-inverted">
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>May 2019</h4>
+                <h4 class="timeline-subheading">Phase Two Ascension</h4>
+              </div>
+              <div class="timeline-body">
+                <p class="text-muted">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
+                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
+                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                  dolore laudantium consectetur!
+                </p>
+              </div>
+            </div>
+            <div class="timeline-image">
+              <img src="https://via.placeholder.com/150" alt="" />
+            </div>
+          </li>
+          <li>
+            <div class="timeline-panel">
+              <div class="timeline-image">
+                <h4>
+                  Find me <br />
+                  On my <br />
+                  <a href="https://www.github.com/mingwheel">Github!</a>
+                </h4>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-    <section class="page-section" id="team"></section>
+    <section class="page-section" id="team">
+      <div class="container">
+        <h2 class="section-heading">Team</h2>
+        <h3 class="section-subheading text-muted">
+          Lorem ipsum dolor sit amet consectetur.
+        </h3>
+      </div>
+    </section>
+    <section class="banner"></section>
 
-    <section class="page-section" id="contact"></section>
+    <section class="page-section" id="contact">
+      <div class="container">
+        <h2 class="section-heading">Contact Us</h2>
+        <h3 class="section-subheading text-muted">
+          Lorem ipsum dolor sit amet consectetur.
+        </h3>
+      </div>
+    </section>
 
     <footer class="footer"></footer>
 
