Update TEAM section

--- a/index.html
+++ b/index.html
@@ -244,13 +244,73 @@
 
     <section class="page-section" id="team">
       <div class="container">
-        <h2 class="section-heading">Team</h2>
+        <h2 class="section-heading">Our Amazing Team</h2>
         <h3 class="section-subheading text-muted">
           Lorem ipsum dolor sit amet consectetur.
         </h3>
+
+        <div class="team-member">
+          <img src="https://via.placeholder.com/211" alt="" />
+          <h4>Kay Garland</h4>
+          <p class="text-muted">Lead Designer</p>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="team-member">
+          <img src="https://via.placeholder.com/211" alt="" />
+          <h4>Larry Parker</h4>
+          <p class="text-muted">Lead Marketer</p>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="team-member">
+          <img src="https://via.placeholder.com/211" alt="" />
+          <h4>Diana Pertersen</h4>
+          <p class="text-muted">Lead Developer</p>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="team-message">
+        <p class="text-muted">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque,
+          laboriosam veritatis, quos non quis ad perspiciatis, totam corporis
+          ea, alias ut unde.
+        </p>
       </div>
     </section>
-    <section class="banner"></section>
+    <section class="banner">
+      <div class="container"></div>
+    </section>
 
     <section class="page-section" id="contact">
       <div class="container">
